<resources>
    <string name="app_name">Wisata</string>
    <string name="title_activity_tampilan_awal">TampilanAwal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="rumah_pengasingan">Rumah yang pada mulanya merupakan milik pengusaha Tionghoa (Tan Eng Cian) yang bekerja untuk Belanda sebagai penyalur sembako bagi Pemerintah Belanda, lalu disewa oleh Belanda sebagai tempat Bung Karno selama diasingkan. Nah, Di tempat ini Bung Karno tinggal dari tahun 1938 sampai dengan 1942.\n\n

Penuh Sejarah \nDi tempat ini juga Soekarno bertemu dengan Ibu Fatmawati yang kelak menjadi istrinya dan merupakan orang yang menjahit bendera merah putih di saat proklamasi 17 Agustus 1945. Walaupun berada di pengasingan, Soekarno tidak pernah berhenti menyusun berbagai strategi perjuangan dalam rangka memperjuangkan kemerdekaan Bangsa Indonesia. Tempat wisata ini juga menyimpan bermacam benda bersejarah, diantaranya adalah sepeda ontel kesayangan Bung Karno, surat cinta Bung Karno untuk Ibu Fatmawati, sampai dengan koleksi buku serta barang peninggalan Soekarno lainnya.

Harga Tiket:  Untuk dapat masuk lokasi wisata ini, anda harus membayar tiket seharga R 2.500,-.</string>
    <string name="danau_dendam">Danau yang memiliki panorama memikat ini berlokasi di Kota Curup, Bengkulu Utara.

Perjalanan

Apabila ditempuh dari pusat Kota Bengkulu maka jaraknya kurang lebih 6 km. Danau ini mempunyai flora dan fauna yang begitu kaya, ditambah dengan banyak bukit hijau yang mengelilinginya membuat danau berhawa sejuk segar ini dijadikan kawasan cagar alam.

\n\nAktivitas dan kegiatan\nSalah satu hal menyenangkan yang dapat dilakukan ketika anda berwisata ke Danau Dendam Tak Sudah adalah naik rakit berkeliling danau serta memancing.</string>
    <string name="sungai_berau">Seperti halnya tempat wisata di Blitar yang memiliki objek wisata arung jeram, Obyek wisata Bengkulu yang selanjutnya adalah Sungai Air Berau. Ini cocok sekali bagi anda yang suka petualangan. Di sungai ini anda bisa melakukan olahraga arung jeram yang dapat memicu adrenalin. Arus sungai yang begitu deras membuatnya pas untuk melakukan arung jeram. Selain olahraga arung

Tempat olahraga air jeram, yang menjadi daya tarik obyek wisata yang satu ini adalah adanya upacara adat bernama upacara anak daro  mandi ke air, maksudnya adalah upacara memandikan bayi baru lahir ke Sungai Air Berau.

\nAlamat : Kabupaten Muko-muko, Bengkulu.</string>
    <string name="air_terjun_curup">Tempat wisata di bengkulu yang paling indah berikutnya adalah air terjun curup. Apabila anda tengah berada di Bengkulu, jangan lupa juga untuk datang melihat keindahan air terjun ini. Dengan alam hijau di sekitarnya dan juga adanya danau, sangat menarik dijadikan destinasi wisata keluarga.\n\n
    Keunikan\nAir terjun curup memiliki banyak keunikan yang dapat membuat anda sangat menikmati wisata alam dari provinsi bengkulu ini, diantaranya adalah ada beberapa air terjun, bukan hanya satu saja. Air dan pemandangan yang sangat menonjol di sekelilingnya.

\nSelain itu air terjun ini juga memiliki batu batuan serta dangkal yang memuatnya dapat dijadikan tempat berendam bagi wisatawan.</string>
    <string name="danau_lebong">Danau ini sebetulnya adalah bekas galian tambang batubara. Namun sayangnya tak direklamasi. Danau Lebong pemandangannya sangat memukau. Airnya biru muda jernih dan terkadang akan berubah warna jadi kehijauan ketika terkena cahaya mentari. Karena Jarak dari lokasi danau yaitu Taba Panunjang dari Bengkulu lumayan jauh, maka untuk mencapai obyek wisata yang satu ini kita perlu persiapan matang dan perjuangan keras.

\nAkan tetapi ketika sampai di lokasi wisata, semua lelah akan hilang. Dibayar oleh pesona panorama Danau Lebong. Perlu diketahui bahwa air danau ini adalah air yang beracun dan dapat membuat lingkungan tercemar.\n

Bengkulu merupakan salah satu provinsi yang berada di Sumatera yang memiliki banyak keindahan alam dan tempat wisata alam seperti danau, pantai, hingga air terjun. Sangat jarang tempat wisata di Indonesia yang memiliki keindahan alam seindah Bengkulu.</string>
    <string name="pantai_tureloto">Sebagai salah satu bagian dari tempat wisata di Sumatera Utara, Kepulauan Nias memang memiliki sebuah potensi wisata yang sangat menarik. meskipun destinasi wisata yang di di kawasan ini kebanyakan terdiri dari wisata pantai yang menarik. Salah satu destinasi tempat wisata di Kepulauan Nias yang wajib di kunjungi adalah Pantai Tureloto\n
    Pantai yang satu ini adalah pantai yang langsung menghadap ke Samudra Hindia. Pantai yang satu ini memang merupakan sebuah pantai yang sangat cantik dan menarik. Maka, tak mengherankan jika kawasan pantai yang satu ini merupakan salah satu andalan destinasi tempat wisata di Nias Utara. Keindahan pantai yang satu sudah tak perlu diragukan. Air lautnya yang berwarna biru bening akan sangat kontras dengan warna pasir bibir pantai dan bebatuan yang ada. Kawasan pantai yang satu ini pada awalnya sangat mirip dengan wisata pantai yang lain.\n
    Namun, sejak gempat besar 2005 silam, kawasan wisata yang satu ini memiliki perubahan yang sangat besar dan mendasar. Kini diantara hamparan pasir pantai yang ada terdapat beragam jenis batuan karang yang semakin menambah keindahan. Jika kalian ingin berkunjung kawasan pantai ini, maka sebaiknya datanglah pada siang hari. Hal ini karena keindahan pantai ini akan semakin terlihat, gradasi warna biru laut yang menyatu dengan warna kecoklatan pasir dan karang. Meskipun pantai ini berhadapan langsung dengan samudra Hindia, tapi pantai yang satu tidak memiliki ombak besar. Justru hal yang sangat menarik adalah, jika kita berenang di pantai ini, maka kita akan sangat mudah untuk terapung. Banyak yang mengatakan bahwa Pantai Tureloto ini merupakan “laut mati”nya indonesia.</string>
    <string name="pulau_asu">Sebaiknya kalian jangan terlalu berpikiran yang macam-macam dengan lokasi wisata yang satu ini. Nama Asu disini bukan bermakna anjing atau sebuah kata umpatan, namun memang nama dari pantai ini sendiri bernama Pulau Asu. Pulau ini banyak sekali memiliki pantai yang sangat indah dan menarik.\n
    Air lautnya yang bening bersih akan memungkinkan bagi kita untuk melihat keindahan dari dasar lautnya. Keindahan pantai yang disini, tak kalah dengan pantai-pantai yang menjadi destinasi tempat wisata di Bali. Pulau yang berada di kawasan Kecamatan Sirombu, Kabupaten Nias Barat, Sumatera Utara, ini merupakan sebuah pulau yang bisa dikatakan cukup sepi dengan yang namanya penduduk. Jumlah penduduk yang mendiami pulau ini memang sangat sedikit, hal ini adalah imbas dari bencana tsunami beberapa tahun silam.\n
    Jadi bisa dikatakan bahwa pulau yang satu ini memang cukup sepi dan bagi yang ingin mencari ketenangan pulau yang satu ini bisa menjadi pilihan. Menikmati pemandangan hamparan pantai terbaik di Indonesia yang ada di kawasan pulau ini pastinya akan memberikan pengalaman tersendiri. Untuk mencapai kawasan pulau ini memang cukup susah. Kita harus ke Medan terlebih dahulu, baru bisa ke Sirombu untuk kemudian dilanjutkan ke Pulau Asu. Selama perjalanan pastinya kita bisa menikmati beragam pemandangan yang memang sudah disediakan.</string>
    <string name="pantai_lagundri">Tempat wisata di Kepulauan Nias yang satu ini memang sudah terkenal dengan keindahan dan kecantikannya yang luar biasa. Nama pantai Lagundri sebagai salah satu destinasi tempat wisata di Nias Selatan memang tak perlu diragukan lagi. Keindahan dari pantai yang satu ini telah menyihir banyak sekali wisatawan guna datang dan menikmati keindahannya.\n
    Maka tak mengherankan jika kawasan ini merupakan salah satu tempat wisata yang banyak dikunjungi turis asing di Indonesia. Salah satu hal yang membuat mereka datang dan berkunjung adalah ombak yang ada di pantai ini. jika kalian menyukai salah satu olah raga yang surfing, maka pantai lagundri adalah salah satu destinasi wajib. Tak hanya sebagai pantai terindah di Indonesia yang dapat menyita perhatian dengan keindahan pemandangan alamnya. Namun, pantai ini juga mampu memikat banyak sekali wisatawan dengan ombaknya.\n
    Ombak yang ada di pantai lagundri sendiri bisa dikatakan memiliki ketinggian yang cukup pas dan baik untuk olah raga surfing. Maka dari itu sering sekali kawasan pantai ini dijadikan sebagai salah satu lokasi untuk mengadakan perlombaan surfing baik bertaraf nasional maupun internasional. Jika kalian tak bisa menikmati ombak di pantai ini karena tak dapat surfing, maka jangan khawatir. Kalian bisa saja duduk bersantai menikmati keindahan pantai ini. Pasirnya yang berwarna putih, serta air lautnya yang berwarna biru kehijuan akan membuat siapa saja jatuh cinta.</string>
    <string name="fahombo">Jika kalian sudah besar sebelum tahun 2000-an atau sebelum jaman reformasi, maka pastinya kalian pernah melihat uang kertas pecahan Rp 1,000 yang berwarna biru. Di salah satu sisi bagian uang kertas tersebut terdapat gambar seorang pria yang sedang melompati tumpukan batu. Kegiatan tersebut dinamakan dengan fahombo, sebuah ritual adat yang sangat khas Nias.\n
    Bahkan kegiatan tersebut kini sudah menjadi salah satu daya tarik wisata di kepulauan nias. Banyak sekali wisatawan yang datang berkunjung untuk melihat dan menyaksikan sendiri ritual tersebut. Sebagai salah satu destinasi wisata budaya di Indonesia, kegiatan tersebut memang bisa dikatakan cukup menarik namun juga cukup ekstrim dan berbahaya. Pada masa awalnya kegiatan lompat batu atau fahombo ini adalah sebuah kegiatan yang bertujuan untuk menunjukan kedewasaan dari seorang anak.\n
    Bahkan pada masa lampau seorang anak suku nias, sudah mempersiapkan diri sejak kecil untuk ritual Fahombo ini. Hal ini dikarenakan jika seorang pria bisa melewati ritual ini, maka dirinya sudah dianggap dewasa untuk menjadi seorang prajurit  dan menikah. Namun, sekarang tujuan dari kegiatan yang satu ini mulai berbeda. Selain menjadi sebuah ritual adat yang sakral, kegiatan ini juga mulai bertujuan untuk dapat menarik pengunjung atau wisatawan.</string>
    <string name="pulau_hinako">Satu lagi tempat wisata di Nias Barat yang tak bisa kita abaikan. Pulau hinako pada dasarnya adalah gugusan dari pulau-pulau kecil yang membentuk sebuah kepulauan. Sedangkan pulau hinako sendiri merupakan pulau utama atau pulau terbesar yang ada di kawasan ini. Pulau ini sendiri hampir sama dengan pantai dan pulau lain yang ada di kawasan wisata di Nias.\n
    Keindahan dan kecantikan pemandangan alamnya memang tidak bisa kita abaikan begitu saja. Pulau yang satu ini merupakan salah satu tempat wisata yang banyak dikunjungi turis asing. Mereka datang ke kawasan pulau ini tak lain untuk menikmati tantangan ombak yang ada di kawasan ini. Pulau ini memang memiliki ombak yang cukup baik bagi kegiatan selancar. Wisatawan yang datang ke lokasi ini tak hanya terbatas pada wisatawan dalam negeri saja, tak jarang mereka juga berasal dari luar negeri. Meskipun kebanyakan ingin mencicipi dan menikmati ombak yang ada di kawasan pulau ini.\n
    Selain berselancar ria kita juga bisa melakukan kegiatan lain yang tak kalah nyaman dan nikmat, yaitu snorkling. Air lautnya yang berwarna biru bening memang memungkinkan kita untuk dapat menikmati keindahan dasar lautnya yang mempesona. Jika kalian datang ke pulau yang satu ini, maka kalian akan langsung jatuh cinta.</string>
</resources>