<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:scrollbars="vertical"
    android:background="#E2DFDF"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Bengkulu">

    <android.support.v7.widget.CardView
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/bengkulucv1"
        >

        <LinearLayout
            android:layout_width="fill_parent"
            android:id="@+id/rel1"
            android:orientation="vertical"
            android:layout_height="fill_parent"
            android:layout_alignStart="@+id/bengkulucv1"
            android:padding="17dp">
            <!--#1-->
            <Button
                android:id="@+id/bengkulu1"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="@drawable/rumah_pengasingan" />

            <TextView
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:textSize="15dp"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:textColor="#000"
                android:text="1. Rumah Pengasingan Bung Karno"/>

            <TextView
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:id="@+id/txt1"
                android:lineSpacingExtra="5sp"
                android:textColor="#000"
                android:text="@string/rumah_pengasingan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:layout_marginTop="5sp"
                android:layout_marginLeft="10dp"
                android:id="@+id/bengkuluMap1"
                android:paddingLeft="10dp"
                android:background="@drawable/map2"
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <!--#2-->
            <Button
                android:layout_marginTop="15dp"
                android:id="@+id/bengkulu2"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="@drawable/danau_dendamtak_sudah" />

            <TextView
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:textSize="15dp"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:textColor="#000"
                android:text="2. Danau Dendam Tak Sudah"/>

            <TextView
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:id="@+id/txt2"
                android:lineSpacingExtra="5sp"
                android:textColor="#000"
                android:text="@string/danau_dendam"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:layout_marginTop="5sp"
                android:layout_marginLeft="10dp"
                android:id="@+id/bengkuluMap2"
                android:paddingLeft="10dp"
                android:background="@drawable/map2"
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <!--#3-->
            <Button
                android:layout_marginTop="15dp"
                android:id="@+id/bengkulu3"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="@drawable/sungai_air_berau" />

            <TextView
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:textSize="15dp"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:textColor="#000"
                android:text="3. Sungai Air Berau"/>

            <TextView
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:id="@+id/txt3"
                android:lineSpacingExtra="5sp"
                android:textColor="#000"
                android:text="@string/sungai_berau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:layout_marginTop="5sp"
                android:layout_marginLeft="10dp"
                android:id="@+id/bengkuluMap3"
                android:paddingLeft="10dp"
                android:background="@drawable/map2"
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <!--#4-->
            <Button
                android:layout_marginTop="15dp"
                android:id="@+id/bengkulu4"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="@drawable/air_terjun_curup" />

            <TextView
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:textSize="15dp"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:textColor="#000"
                android:text="4. Air Terjun Curup"/>

            <TextView
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:id="@+id/txt4"
                android:lineSpacingExtra="5sp"
                android:textColor="#000"
                android:text="@string/air_terjun_curup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:layout_marginTop="5sp"
                android:layout_marginLeft="10dp"
                android:id="@+id/bengkuluMap4"
                android:paddingLeft="10dp"
                android:background="@drawable/map2"
                android:layout_width="20dp"
                android:layout_height="20dp" />

            <!--#5-->
            <Button
                android:layout_marginTop="15dp"
                android:id="@+id/bengkulu5"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:background="@drawable/danau_lebong" />

            <TextView
                android:textStyle="bold"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:textSize="15dp"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:textColor="#000"
                android:text="5. Danau Lebong"/>

            <TextView
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:id="@+id/txt5"
                android:lineSpacingExtra="5sp"
                android:textColor="#000"
                android:text="@string/danau_lebong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:layout_marginTop="5sp"
                android:layout_marginLeft="10dp"
                android:id="@+id/bengkuluMap5"
                android:paddingLeft="10dp"
                android:background="@drawable/map2"
                android:layout_width="20dp"
                android:layout_height="20dp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

</ScrollView>